@@ -1,4 +1,7 @@
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* server-src/amindexd.c: main(): replace vstrextend() with a GString
+
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
 	* server-src/amcheck.c: start_host(): replace vstrextend() with a
 	  GString
 
